--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 
 body {
     font-family: "Roboto", sans-serif;
+    background-color: #FFFFFF;
   }
   
   .second-font {
@@ -151,7 +152,10 @@ body {
     margin: 0 auto;
     justify-content: center;
     gap: 30px;
-  }
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bar.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    }
   
   .button-bar {
     background: #2196f3;
@@ -228,6 +232,7 @@ body {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     
   }
   
@@ -320,8 +325,8 @@ body {
   margin-bottom: 100px;
 }
 
-.our-team container {
-  background: #f5f4fa;
+.our-team .container {
+  background-color: #F5F4FA;
   padding-top: 90px;
   padding-bottom: 20px;
 }
