dodano zmiany z hw03

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@
   margin: 0 auto;
 }
 
+section {
+  margin: 0 auto;
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     background-color: #FFFFFF;
@@ -77,8 +83,8 @@ body {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin-top: 100px;
-    margin-bottom: 50px;
+    /*margin-top: 100px;
+    margin-bottom: 50px;*/
   }
   
   .menu {
@@ -190,8 +196,8 @@ body {
     line-height: 1.14;
     letter-spacing: 0.03em;
     color: #757575;
-    width: 270px;
-    height: 75px;
+    /*width: 270px;
+    height: 75px;*/
   }
   
   li {
@@ -302,17 +308,16 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   flex-grow: 1;
-  margin-bottom: 100px;
+  /*margin-bottom: 100px;*/
 }
 
 .h-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  display:flex;
+  align-items:center;
   justify-content: space-between;
   gap: 40px;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  /*margin-top: 100px;*/
+  /*margin-bottom: 100px;*/
 }
 
 .hp3-wrapper {
@@ -322,13 +327,13 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   flex-grow: 1;
-  margin-bottom: 100px;
+  /*margin-bottom: 100px;*/
 }
 
-.our-team .container {
+.our-team {
   background-color: #F5F4FA;
-  padding-top: 90px;
-  padding-bottom: 20px;
+  /*padding-top: 90px;
+  padding-bottom: 20px;*/
 }
 
 header {
@@ -350,9 +355,9 @@ header {
   gap: 75px
 }
 
-.lorem {
+/*.lorem {
   padding: 0px;
-}
+}*/
 
 .our-team-title {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
