--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
@@ -76,6 +79,21 @@ body {
     margin-bottom: 50px;
   }
 
+.icon {
+  width: 16px;
+  height: 16px;
+  text-decoration: none;
+  border-style: none;
+  background-color: #ffffff;
+  cursor: pointer;
+}  
+
+.icon svg:hover,
+.icon svg:focus {
+  fill: #2196f3;
+  transition: all 0.2s;
+}
+
   .nav-portfolio {
     display: flex;
     flex-grow: 1;
@@ -110,27 +128,53 @@ body {
   }
   
   .menu-contact {
-    font-weight: 500px;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    color: #2196f3;
     display: flex;
     flex-grow: 1;
+    align-items: center;
     gap: 50px;
-    justify-content: space-between;
-    text-decoration: none;
+
+  }
+
+  .address {
+      text-decoration: none;
+      color: #757575;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.14;
+  }
+
+  .menu-contact svg {
+    align-self: center;
+    margin-right: 10px;
   }
 
   .menu-contact a {
     text-decoration: none;
-    color: #000000;
+    font-size: 14px;
+    font-weight: 500px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    color: #757575;
+    display: flex;
+    flex-grow: 1;
+    gap: 2px;
+    justify-content: space-between;
+    text-decoration: none;
   }
 
-  .mailto a:hover {
-    text-decoration: none;
+  .menu-contact a:hover,
+  .menu-contact a:focus {
+    fill: #2196f3;
     color: #2196f3;
+    transition: all 0.2s;
   }
+
+  .menu-contact:hover svg,
+  .menu-contact:focus svg {
+  fill: #2196f3;
+  color: #2196f3;
+  transition: all 0.2s;
+}
 
   .menu-footer {
     font-size: 14px;
@@ -349,6 +393,11 @@ header {
   flex-wrap: wrap;
 }
 
+.header-wrapper svg {
+  fill: #757575;
+  padding-top: 0px;
+}
+
 .menu-wrapper {
   display: flex;
   align-items:center;
@@ -362,3 +411,50 @@ header {
 .our-team-title {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+.box-social{
+  width: 206px;
+  height: 56px;
+  margin: auto;
+}
+
+.icon-social {
+  justify-content:center;
+  flex-direction: row;
+  display: flex;
+}
+.icon-social li {
+  width: 44px;
+  margin-bottom: 30px;
+  box-shadow: none;
+  margin-right: 0px;
+}
+.icon-social li:not(:last-child) {
+  margin-right: 10px;
+}
+
+.our-customer {
+  text-align: center;
+}
+.our-customer svg {
+  fill: #afb1b8;
+  border-radius: 4px;
+  outline: 1px solid #afb1b8;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.our-customer svg:hover,
+.our-customer svg:focus {
+  outline: 1px solid #2196f3;
+  transition: all 0.2s;
+}
+
+.our-customer ul {
+  display: flex;
+  padding-left: 0;
+}
+.our-customer li:not(:last-child) {
+  margin-right: 30px;
+}
+
+
