--- a/css/style.css
+++ b/css/style.css
@@ -169,8 +169,8 @@ body {
     transition: all 0.2s;
   }
 
-  .menu-contact:hover svg,
-  .menu-contact:focus svg {
+  .address:hover svg,
+  .address:focus svg {
   fill: #2196f3;
   color: #2196f3;
   transition: all 0.2s;
