--- a/css/style.css
+++ b/css/style.css
@@ -82,17 +82,6 @@ body {
     margin-bottom: 50px;
   }
 
-  h4 {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    margin-top: 12px;
-    color:  #FFFFFF;
-  }
-
 .icon {
   width: 16px;
   height: 16px;
@@ -292,7 +281,7 @@ body {
     text-align: center;
     letter-spacing: 0.03em;
     color: #757575;
-    padding-bottom: 30px;
+    padding-bottom: 60px;
   }
   
   .people {
@@ -430,17 +419,30 @@ header {
   margin: auto;
 }
 
-.icon-social {
-  justify-content:center;
-  flex-direction: row;
+.icon-social,
+.box-social{
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.icon-social li {
-  width: 44px;
-  margin-bottom: 30px;
-  box-shadow: none;
-  margin-right: 0px;
+
+.icon-social {
+  gap: 10px;
+  align-items: center;
 }
+
+.icon-social > li {
+    display: flex;
+    background: #817f7f;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+
 .icon-social li:not(:last-child) {
   margin-right: 10px;
 }
