--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,21 @@ body {
     font-family: "Roboto", sans-serif;
     background-color: #FFFFFF;
   }
+
+  :root {
+    --hover-color: rgba(33, 150, 243, 1);
+    --logo-color2: rgba(0, 0, 0, 1);
+    --text-color: rgba(117, 117, 117, 1);
+    --text2-color: rgba(255, 255, 255, 1);
+    --text3-color: rgba(255, 255, 255, 0.6);
+    --background-color: rgba(47, 48, 58, 1);
+    --background-color2: rgba(245, 244, 250, 1);
+    --background-color3: rgba(255, 255, 255, 0.1);
+    --border-bottom-color: rgba(236, 236, 236, 1);
+    --border-bottom-color2: rgba(238, 238, 238, 1);
+    --svg-color: rgba(175, 177, 184, 1);
+    --gradient-color: rgba(47, 48, 58, 0.4);
+}
   
   .second-font {
     font-family: "Raleway", sans-serif;
@@ -87,7 +102,7 @@ body {
   height: 16px;
   text-decoration: none;
   border-style: none;
-  background-color: #ffffff;
+  color: #FFFFFF;
   cursor: pointer;
 }  
 
@@ -95,6 +110,7 @@ body {
 .icon svg:focus {
   fill: #2196f3;
   transition: all 0.2s;
+  --color3: #2196F3;
 }
 
   .nav-portfolio {
@@ -428,18 +444,17 @@ header {
 
 .icon-social {
   gap: 10px;
-  align-items: center;
 }
 
-.icon-social > li {
+.icon-social>li {
     display: flex;
-    background: #817f7f;
+    background: var(--text2-color);
     width: 44px;
     height: 44px;
     border-radius: 50%;
     align-items: center;
     justify-content: center;
-    margin-top: 40px;
+    margin-top: 16px;
     margin-bottom: 30px;
 }
 
@@ -496,7 +511,6 @@ footer {
   flex-direction: column;
   align-content: center;
   justify-content: center;
-  margin-left: 35%;
   align-items: flex-start;
 }
 
@@ -504,6 +518,8 @@ footer {
   padding-top: 70px;
   margin-bottom: 20px;
   margin-right: 0;
+  color: #FFFFFF;
+  font-family: "Roboto", sans-serif;
 }
 
 .social-list-footer {
@@ -524,4 +540,27 @@ footer {
 .second-font-footer {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+.logo-footer {
+  display: flex;
+  gap:70px;
+}
+
+.social-list-footer>li:hover,
+.social-list-footer>li:focus {
+  background: var(--hover-color);
+  cursor: pointer;
+}
+
+.icon-social>li:hover {
+  background: var(--hover-color);
+  --color4: var(--text2-color);
+  cursor: pointer;
+  margin-bottom: 130px;
+}
+
+.icon-smartphone,
+.icon-email {
+    margin-right: 10px;
 }
