--- a/css/style.css
+++ b/css/style.css
@@ -163,14 +163,13 @@ body {
   }
 
   .menu-contact svg {
-    align-self: center;
+    align-self: auto;
     margin-right: 10px;
   }
 
   .menu-contact a {
-    text-decoration: none;
     font-size: 14px;
-    font-weight: 500px;
+    font-weight: 500;
     line-height: 16px;
     letter-spacing: 0.02em;
     color: #757575;
@@ -256,6 +255,7 @@ body {
     text-transform: uppercase;
     color: #212121;
     margin-bottom: 10px;
+    margin-top: 10px;
   }
   
   .description-lorem {
@@ -444,11 +444,12 @@ header {
 
 .icon-social {
   gap: 10px;
+  padding-bottom: 3rem;
 }
 
 .icon-social>li {
     display: flex;
-    background: var(--text2-color);
+    background: ;
     width: 44px;
     height: 44px;
     border-radius: 50%;
@@ -456,6 +457,10 @@ header {
     justify-content: center;
     margin-top: 16px;
     margin-bottom: 30px;
+    stroke: #afb1b8;
+    fill: #afb1b8;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+      border-radius: 50%;
 }
 
 .icon-social li:not(:last-child) {
@@ -496,8 +501,7 @@ figure svg {
 
 footer {
   background: #2f303a;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-block: 3.75rem;
   display: flex;
 }
 
@@ -509,13 +513,10 @@ footer {
 .social-links-footer {
   display: flex;
   flex-direction: column;
-  align-content: center;
-  justify-content: center;
-  align-items: flex-start;
 }
 
 .h3-footer {
-  padding-top: 70px;
+  padding-top: 12px;
   margin-bottom: 20px;
   margin-right: 0;
   color: #FFFFFF;
@@ -525,7 +526,6 @@ footer {
 .social-list-footer {
   display: flex;
   gap: 10px;
-  padding-bottom: 100px;
 }
 
 .social-list-footer>li {
@@ -535,11 +535,10 @@ footer {
   border-radius: 50%;
   align-items: center;
   justify-content: center;
+  background-color: #6d6a6a;
 }
-
-.second-font-footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
+.social-list-footer>li:hover {
+  background-color: #2196F3;
 }
 
 .logo-footer {
@@ -547,20 +546,22 @@ footer {
   gap:70px;
 }
 
-.social-list-footer>li:hover,
+.social-list-footer>li:hover svg,
 .social-list-footer>li:focus {
-  background: var(--hover-color);
   cursor: pointer;
 }
 
 .icon-social>li:hover {
-  background: var(--hover-color);
-  --color4: var(--text2-color);
+  background: #2196F3;
+  fill: #ffffff;
   cursor: pointer;
-  margin-bottom: 130px;
 }
 
 .icon-smartphone,
 .icon-email {
     margin-right: 10px;
+}
+
+.h-wrapper svg {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
