--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ body {
     gap: 30px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bar.jpg);
     background-repeat: no-repeat;
-    background-size:cover;
+    background-position: center;
     }
   
   .button-bar {
@@ -377,7 +377,7 @@ body {
   display:flex;
   align-items:center;
   justify-content: space-between;
-  gap: 40px;
+  gap: 60px;
   /*margin-top: 100px;*/
   /*margin-bottom: 100px;*/
 }
@@ -562,6 +562,27 @@ footer {
     margin-right: 10px;
 }
 
-.h-wrapper svg {
+/*.h-wrapper svg {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}*/
+
+.realizations:hover {
+  background: #FFFFFF;
+  border: 1px solid #EEEEEE;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
+.nav-portfolio>li:hover {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+}
+
+figure, figcaption {
+  padding-block: 0.6rem;
+}
+
+h4, p {
+  padding-block: 0.25rem;
+  }
