--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,8 @@ body {
   .button-portfolio:hover {
     background: #2196f3;
     color:#ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+      border-radius: 4px;
   }
   
   .realizations {
@@ -426,9 +428,7 @@ header {
   padding: 0px;
 }*/
 
-.our-team-title {
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
+
 .box-social{
   width: 206px;
   height: 56px;
@@ -459,7 +459,7 @@ header {
     margin-bottom: 30px;
     stroke: #afb1b8;
     fill: #afb1b8;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    /*box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);*/
       border-radius: 50%;
 }
 
@@ -574,9 +574,9 @@ footer {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.nav-portfolio>li:hover {
+/*.nav-portfolio>li:hover {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
+    border-radius: 4px;*/
 }
 
 figure, figcaption {
