--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,7 @@ body {
     justify-content:space-between;
     text-decoration: none;
     gap: 50px;
+    position: relative;
   }
   
   .menu a {
@@ -392,6 +393,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   flex-grow: 1;
+  position: relative;
   /*margin-bottom: 100px;*/
 }
 
@@ -588,4 +590,80 @@ h4, p {
   padding-block: 0.25rem;
   }
 
+.hover-menu::after{
+  content:"";  
+  position:absolute;     
+  width: 53px;  
+  height: 4px; 
+  border-radius: 2px; background-color: #2196F3;
+  left: -1px;
+  top: 29px;
+ }
 
+ .comuter-app {
+  /*font-family: "Roboto", sans-serif;*/
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  left: 0px;
+  bottom: 0px;
+  background-color: rgba(47, 48, 58, 0.8);;
+  opacity: 80%;
+ }
+
+ .smart-app {
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  left: 416px;
+  bottom: 4px;
+  background-color: rgba(47, 48, 58, 0.8);;
+  opacity: 80%;
+ }
+
+ .graphic-app {
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  left: 831px;
+  bottom: 4px;
+  background-color: rgba(47, 48, 58, 0.8);;
+  opacity: 80%;
+ }
+
+ .hp3-wrapper h3 {
+  color: #FFFFFF;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16.41px;
+  letter-spacing: 3%;
+  text-align: center;
+  margin-top: 33px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+ }
+
+ .box1 {
+  position: relative;
+  overflow:hidden;
+  width: 370px;
+  height: 294px;
+  background: #2196F3;
+}
+
+.overlay {
+  position: absolute;
+  overflow:visible;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 75%;
+  transform: translateY(150%);
+  background-color: #3f51b5;
+  opacity: 80%;
+}
+
+.box1:hover .overlay {
+  transform: translateY(0%);
+  transition: transform 0.5s;
+  background-color: #2196F3;
+}
