--- a/css/style.css
+++ b/css/style.css
@@ -579,8 +579,8 @@ footer {
 
 /*.nav-portfolio>li:hover {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;*/
-}
+    border-radius: 4px;
+}*/
 
 figure, figcaption {
   padding-block: 0.6rem;
@@ -590,45 +590,56 @@ h4, p {
   padding-block: 0.25rem;
   }
 
-.hover-menu::after{
+.hover-menu::after {
   content:"";  
   position:absolute;     
   width: 53px;  
   height: 4px; 
-  border-radius: 2px; background-color: #2196F3;
+  border-radius: 2px; 
+  background-color: #2196F3;
   left: -1px;
+  top: 29px;
+ }
+
+ .hover-menu1::after {
+  content:"";  
+  position:absolute;     
+  width: 53px;  
+  height: 4px; 
+  border-radius: 2px; 
+  background-color: #2196F3;
+  left: 105px;
   top: 29px;
  }
 
  .comuter-app {
   /*font-family: "Roboto", sans-serif;*/
   position: absolute;
+  display: block;
   width: 370px;
   height: 70px;
   left: 0px;
-  bottom: 0px;
-  background-color: rgba(47, 48, 58, 0.8);;
-  opacity: 80%;
+  bottom: 4px;
+  background-color: rgba(47, 48, 58, 0.8);
  }
 
  .smart-app {
   position: absolute;
+  display: block;
   width: 370px;
   height: 70px;
-  left: 416px;
+  left: 415px;
   bottom: 4px;
   background-color: rgba(47, 48, 58, 0.8);;
-  opacity: 80%;
  }
 
  .graphic-app {
   position: absolute;
   width: 370px;
   height: 70px;
-  left: 831px;
+  left: 830px;
   bottom: 4px;
   background-color: rgba(47, 48, 58, 0.8);;
-  opacity: 80%;
  }
 
  .hp3-wrapper h3 {
@@ -642,28 +653,80 @@ h4, p {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  }
 
- .box1 {
+ .app-box {
+  display: block;
   position: relative;
   overflow:hidden;
-  width: 370px;
-  height: 294px;
-  background: #2196F3;
+}
+
+.realizations-boxes {
+  overflow:hidden;
+  position: relative;
+  width: auto;
+}
+
+.realizations-boxes > img {
+  display: block;
+}
+
+.overlay > p {
+  margin: 35px;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
 }
 
 .overlay {
   position: absolute;
-  overflow:visible;
   top: 0;
   left: 0;
   width: 100%;
-  height: 75%;
-  transform: translateY(150%);
-  background-color: #3f51b5;
-  opacity: 80%;
+  height: 100%;
+  transform: translateY(100%);
+  background-color: rgba(33, 150, 243, 0.9);
+  border: 1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.box1:hover .overlay {
+.realizations-boxes:hover .overlay {
   transform: translateY(0%);
-  transition: transform 0.5s;
-  background-color: #2196F3;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop {
+  position: fixed;
+  display: flex;
+  left: 0%;
+  top:0%;
+  width:100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.25);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 1;
+}
+
+.is-hidden {
+transform:scale(0%);
+}
+
+.modal {
+  width: 528px;
+  height: 581px;
+  margin: auto;
+  padding: 10px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-button {
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 50%;
+  margin-left: 93%;
 }
