--- a/css/style.css
+++ b/css/style.css
@@ -679,14 +679,14 @@ h4, p {
 
 .overlay {
   position: absolute;
-  top: 0;
+  top: 1px;
   left: 0;
   width: 100%;
   height: 100%;
   transform: translateY(100%);
   background-color: rgba(33, 150, 243, 0.9);
-  border: 1px solid #000000;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  /*border: 1px solid #000000;*/
+  /*box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);*/
 }
 
 .realizations-boxes:hover .overlay {
