--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ body {
   .menu a {
     text-decoration: none;
     color: #000000;
+    position: relative;
   }
   
   .menu a:hover {
@@ -538,7 +539,8 @@ footer {
   border-radius: 50%;
   align-items: center;
   justify-content: center;
-  background-color: #6d6a6a;
+  background-color: rgba(255, 255, 255, 0.1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-list-footer>li:hover {
   background-color: #2196F3;
@@ -593,22 +595,11 @@ h4, p {
 .hover-menu::after {
   content:"";  
   position:absolute;     
-  width: 53px;  
+  width: 54px;  
   height: 4px; 
   border-radius: 2px; 
   background-color: #2196F3;
-  left: -1px;
-  top: 29px;
- }
-
- .hover-menu1::after {
-  content:"";  
-  position:absolute;     
-  width: 53px;  
-  height: 4px; 
-  border-radius: 2px; 
-  background-color: #2196F3;
-  left: 105px;
+  left: 0px;
   top: 29px;
  }
 
@@ -684,14 +675,18 @@ h4, p {
   width: 100%;
   height: 100%;
   transform: translateY(100%);
-  background-color: rgba(33, 150, 243, 0.9);
+  /*background-color: rgba(33, 150, 243, 0.9);*/
+  /*transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
+  transition-property: fill var(--background-color) cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
   /*border: 1px solid #000000;*/
   /*box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);*/
 }
 
-.realizations-boxes:hover .overlay {
+.realizations:hover .overlay {
   transform: translateY(0%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /*transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
+  background-color: rgba(33, 150, 243, 0.9);
 }
 
 .backdrop {
