--- a/css/style.css
+++ b/css/style.css
@@ -540,7 +540,8 @@ footer {
   align-items: center;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.1);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: fill var(--background-color) cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
 }
 .social-list-footer>li:hover {
   background-color: #2196F3;
