--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,6 @@ body {
   fill: #2196f3;
   /*transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
   /*transition-property: fill #2196f3;*/
-
   /*--color3: #2196F3;*/
 }
 
@@ -144,6 +143,7 @@ body {
     text-decoration: none;
     color: #000000;
     position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
   .menu a:hover {
@@ -184,8 +184,7 @@ body {
     gap: 2px;
     justify-content: space-between;
     text-decoration: none;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition-property: fill, color;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .menu-contact a:hover,
@@ -343,8 +342,7 @@ body {
     border-color: #EEEEEE;
     padding: 6px 22px;
     cursor: pointer;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition-property: var(--background-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
   .button-portfolio:hover {
@@ -358,7 +356,7 @@ body {
     background: #ffffff;
     border: 1px solid #eeeeee;
     margin-bottom: 30px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
   .name-project {
@@ -461,11 +459,11 @@ header {
 .icon-social {
   gap: 10px;
   padding-bottom: 3rem;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-social>li {
     display: flex;
-    background: ;
     width: 44px;
     height: 44px;
     border-radius: 50%;
@@ -475,8 +473,7 @@ header {
     margin-bottom: 30px;
     stroke: #afb1b8;
     fill: #afb1b8;
-    /*box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);*/
-      border-radius: 50%;
+    border-radius: 50%;
 }
 
 .icon-social li:not(:last-child) {
@@ -492,8 +489,7 @@ header {
   outline: 1px solid #afb1b8;
   flex-direction: row;
   flex-wrap: nowrap;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: fill;
+  transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -556,9 +552,9 @@ footer {
   align-items: center;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.1);
-  transition-property: fill var(--background-color) cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 250ms;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .social-list-footer>li:hover {
   background-color: #2196F3;
 }
@@ -694,8 +690,7 @@ h4, p {
   transform: translateY(100%);
   /*background-color: rgba(33, 150, 243, 0.9);*/
   /*transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
-  transition-property: fill var(--background-color) cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 250ms;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   /*border: 1px solid #000000;*/
   /*box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);*/
 }
